[package]
name = "frameflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "6.0.0"
futures-lite = "1.12.0"
lapin = "2.1.1"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = {version = "1.27.0", features = [ "full" ] }
tracing = "0.1.37"
