[package]
name = "frameflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
dotenv = "0.15.0"
ffmpeg-next = "6.0.0"
futures-lite = "1.12.0"
image = "0.24.6"
lapin = "2.1.1"
nanoid = "0.4.0"
rayon = "1.7.0"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = {version = "1.27.0", features = [ "full" ] }
